added new methods
